# ZClip

./: README.md  pyproject.toml  run_tests.sh  zclip.py  zclip_callback.py  zclip_lightning_callback.py
.circleci/: config.yml
.github/workflows/: ci-cd.yml
tests/: test_fsdp_utils.py  test_zclip.py
zclip/: __init__.py  zclip.py  zclip_lightning_callback.py
zclip_lightning_callback/: __init__.py
